@@ -1,5 +1,8 @@
 2008-12-02  Ulrich Drepper  <drepper@redhat.com>
 
+	* resolv/res_init.c (__res_vinit): Fill in IPv4 name server
+	information at the correct index.
+
 	* socket/sys/socket.h: Declare accept4.
 	* socket/accept4.c: New file.
 	* sysdeps/unix/sysv/linux/accept4.c: New file.
